ckb-light-client/ckb-light-client-testnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: public-node
  name: ckb-light-client-testnet-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: light-client-testnet.ckbapp.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ckb-light-client-testnet-svc
                port:
                  number: 9000
